Wed Sep 29 21:04:05 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* test/ruby/test_rubyoptions.rb (TestRubyOptions::test_script_from_stdin):
	  As usual, PTY is not always available.

Wed Sep 29 18:38:14 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/config.sub (x64): regularize only for pc vendor, and strip
	  useless 64 suffix.

Wed Sep 29 17:53:02 2010  Kenta Murata <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (BIGDECIMAL_ENABLE_VPRINT):
	  VPrint is usually disabled.  It's only used in debugging.

Wed Sep 29 17:41:34 2010  Kenta Murata <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (BigDecimal_save_limit):
	  return the result of a block.

	* test/bigdecimal/test_bigdecimal.rb (test_save_limit):
	  add a test for the above change.

Wed Sep 29 16:18:03 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* vm_dump.c (dump_thread): remove ununsed optional arguments.

Wed Sep 29 13:26:30 2010  Kenta Murata <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (BigDecimal_save_rounding_mode):
	  return the result of a block.

	* test/bigdecimal/test_bigdecimal.rb (test_save_rounding_mode):
	  add a test for the above change.

	* test/bigdecimal/test_bigdecimal.rb (test_save_exception_mode):
	  add a test for the return value of BigDecimal.save_exception_mode.

Wed Sep 29 12:45:30 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/bigdecimal/bigdecimal.c (BigDecimal_div2, BigDecimal_add2,
	  BigDecimal_sub2, BigDecimal_mult2, VpLimitRound): remove meaningless
	  casts to get rid of compiler warnings.

Wed Sep 29 12:35:13 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/bigdecimal/bigdecimal.c (VPrint, VpToString): fix format.

Wed Sep 29 12:31:12 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/rdoc/known_classes.rb (RDoc::KNOWN_CLASSES): add Encoding.

Tue Sep 28 20:50:23 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/config.sub (x64): regularize same as mswin.

Tue Sep 28 20:06:14 2010  NAKAMURA Usaku  <usa@ruby-lang.org>
