@@ -1,3 +1,8 @@
+Thu Sep 30 09:34:03 2010  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* vm_dump.c (dump_thread): fixed wrong type of return value of
+	  SymGetModuleBase64(). [ruby-dev:42306]
+
 Wed Sep 29 21:04:05 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>
 
 	* test/ruby/test_rubyoptions.rb (TestRubyOptions::test_script_from_stdin):
